# rss-feed-translator

./: .gitignore  .tool-versions  CLAUDE.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/rulesets/: main-protection.json
.github/workflows/: dependabot-auto-merge.yml  test.yml  update-rss.yml
cache/: char_usage.json  http_cache.json  translated.json
docs/: blog-ai-spec-driven-dev.md  glossary.md  report.html
docs/feed/: ars-technica.xml  dev-community.xml  hacker-news.xml  infoq.xml
docs/superpowers/plans/: 2026-06-29-rss-feed-translator.md  2026-06-30-daily-char-budget.md  2026-07-01-translation-review-report.md
docs/superpowers/specs/: 2026-06-29-rss-feed-translator-design.md
src/: cache.py  daily_budget.py  exceptions.py  fetcher.py  generator.py  models.py  report_generator.py  summarizer.py  translator.py
src/summarizers/: claude.py  openai.py
src/translators/: claude.py  deepl.py  google.py  openai.py
tests/: conftest.py  test_cache.py  test_daily_budget.py  test_fetcher.py  test_generator.py  test_models.py  test_pipeline.py  test_report_generator.py  test_summarizer.py  test_translator.py
