[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rss-feed-translator"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "feedparser>=6.0.12",
    "requests>=2.32",
    "pyyaml>=6.0.3",
    "google-cloud-translate>=3.15",
    "openai>=1.50",
    "anthropic>=0.34",
    "deepl>=1.30.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-requests",
    "types-PyYAML",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
