[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rss-feed-translator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "requests>=2.34.2",
    "pyyaml>=6.0.3",
    "openai>=2.46.0",
    "anthropic>=0.116.0",
    "deepl>=1.30.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "responses>=0.26.2",
    "mypy>=2.1.0",
    "ruff>=0.15.21",
    "types-requests",
    "types-PyYAML",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
